# corral

./: .gitignore  ARCHITECTURE.md  CLI_AUDIT.md  CLI_AUTH_DESIGN.md  DESIGN.md  DOCS_UPDATE.md  GATING_PATTERNS.md  INTEGRATION_LEARNINGS.md  LAUNCH_POSTS.md  LICENSE  README.md  ROADMAP.md  TEMPLATE_AUDIT.md  USAGE_LAYER.md  package-lock.json  package.json
.changeset/: config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: agents.html  api.html  billing.html  cli.html  concepts.html  deployment.html  frameworks.html  gating.html  index.html  llms-full.txt  llms.txt  quickstart.html
docs/css/: style.css
skill/: SKILL.md
validation/go/: corral.go  go.mod
validation/python/: corral_validate.py  pyproject.toml
validation/ruby/: corral_validate.gemspec  corral_validate.rb
validation/rust/: Cargo.toml
validation/rust/src/: lib.rs
